# ray-tracer

./: CMakeLists.txt  LICENSE  README.md  build.bat
cpu/: CMakeLists.txt  main.cpp
cpu/primitives/: shape.h
gpu/: CMakeLists.txt  main.cpp
gpu/shaders/: shader.frag
src/: CMakeLists.txt  main.cpp
